# catppuccin-mkdocs

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
mkdocs_catppuccin/: __init__.py  mkdocs_theme.yml
mkdocs_catppuccin/assets/stylesheets/: catppuccin.css
src/templates/assets/stylesheets/main/: _colors.scss
src/templates/assets/stylesheets/palette/: _scheme.scss
